Possible compatibility problems with earlier versions marked with '*'.

--- 1.9.3 2002/MM/DD

For TCP/IP COMSTACK, set recv buffer to an appropriate "large" value
on Solaris. Patch from Ko van der Sloot.

New MARC decode API. All new functions operate on a yaz_marc_t
handle. The most important new functions are: yaz_marc_create,
yaz_marc_decode_{buf,wrbuf}, yaz_marc_destroy, .. to create handler,
decode and destroy respectively. Decoder can produce formats
MARC line, simple XML, OAI MARC and MARC XML (LoC). See
include/yaz/marcdisp.h.

YAZ Iconv utility now supports MARC8 decoding (marc8.c). Converts
to UTF-8, UCS-32, wchar_t or Latin-1.

* Prototypes for yaz_iconv_-functions moved to separate header 
include/yaz/yaz-iconv.h.

Make a few private functions 'static' in unix.c. This prevents
duplicate unix_close in PHP with YAZ and imap. PHP Bug 20977.

For ZOOM connection, the options targetImplementation{Id,Name,Version}
are set when Init Response is received.

New function ZOOM_connection_error_x similar to ZOOM_connection_error
but returns diagnostic set as well.

New function yaz_strerror which is a portable wrapper for
strerror/strerror_r/GetLastMessage.

* ZOOM_record_get supports type "xml" in which case MARC XML (from LOC)
is returned for MARC. If type is "oai", then OAI MARC is returned.

Fix creation of lib/yaz-config so it works if srcdir != objdir. Patch
from Kang-Jin Lee.

--- 1.9.2 2002/11/26

yaz_marc_decode uses OAI MARC as XML format for ISO2709 records.

Fix bad race conditions on SIGTERM and terminate gracefully in
frontend server.

Move retrieval (data1) module to Zebra since nobody seems to be
using it.

Add GRS-1 render for ZOOM using same format as yaz-client.

--- 1.9.1 2002/10/05

Added man pages: yaz-client(1), yaz-ztest(8), yaz(7), zoomsh(1).

Fix broken ESpec handling in data1 module.

SGML reader parses comments and makes them part of the data1 tree.

Added several type casts so that YAZ compiles as C++ code.
